test/cases/compile_errors/wrong_type_passed_to_panic.zig
export fn entry() void {
    const e = error.Foo;
    @panic(e);
}

// error
// backend=stage2
// target=native
//
// :3:12: error: expected type '[]const u8', found 'error{Foo}'
